frontend: fix left menu alignment & aside right fixed pos

--- a/frontend/global/scss/templates/_one-column-with-menu-and-sidebar.scss
+++ b/frontend/global/scss/templates/_one-column-with-menu-and-sidebar.scss
@@ -19,8 +19,13 @@
 
     .aside-right {
         .aside-right-fixed {
+            position: relative;
+            
             @include media-breakpoint-down(xxl) {
                 position: relative;
+            }
+            &.position-fixed {
+                position: fixed;
             }
         }
     }
