--- a/frontend/global/scss/templates/_two-columns-main-left.scss
+++ b/frontend/global/scss/templates/_two-columns-main-left.scss
@@ -3,7 +3,15 @@
 
 .aside-right {
     padding-left: $grid-gutter-width/2;
-    
+    position: relative;
+
+    .aside-right-fixed {
+        &.position-fixed {
+            position: fixed;
+            padding-right: $grid-gutter-width-half;
+        }
+    }
+
     @include media-breakpoint-down(md) {
         .djangocms-toc {
             display: none;
